Fix spacing/sizing

--- a/src/dw_design_system/dwds/layouts/content_sidebar.scss
+++ b/src/dw_design_system/dwds/layouts/content_sidebar.scss
@@ -10,7 +10,7 @@
 
     &.small {
         --sidebar-size: 150px;
-        --sidebar-min-size: 25%;
+        --sidebar-min-size: 66%;
     }
 }
 
